# DPRR-GNN

./: Dockerfile  Dockerfile_dev  LICENSE  MT.h  Pipfile  README.md  docker-compose.yml  docker-compose_dev.yml  execute_models.py  insert_noise.py  insert_noise_nonprivate_select_rand.c  insert_noise_onlyDPRR_select_rand_final.c  pyproject.toml  utils.py
conf/: baseline_powerful.yml  dprr_powerful.yml  lap_powerful.yml  no_noise_powerful.yml  rr_powerful.yml
models/: graphcnn.py  mlp.py
